k8s/createmod/dev/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: createmod-com-dev
  annotations:
    linkerd.io/inject: enabled
    config.linkerd.io/skip-outbound-ports: "443"  # Allow backup jobs to complete
