k8s/createmod/dev/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: createmod
  namespace: createmod-com-dev
  labels:
    app: createmod
spec:
  selector:
    app: createmod
  ports:
    - name: http
      port: 80
      targetPort: 8090
      protocol: TCP
  type: ClusterIP
